# intervals-icu-mcp

./: Dockerfile  Dockerfile.upstream-stdio  README.md  pyproject.toml
Updates/: 01-critical-security.md  04-polish.md  05-data-enrichment.md
Updates/Archive/: 01-critical-security.md  02-stability-high.md  03-medium-hardening.md  2026-07-01-connector-issues-remaining-work.md
docs/: SESSION-RESUME.md  connector-review-fixes.md  hosted-oauth-deployment.md
docs/specs/: 2026-07-07-unified-coach-platform-design.md
src/intervals_icu_mcp/: client.py  coercion.py  firestore_oauth.py  google_oauth.py  middleware.py  models.py  remote_server.py  response_builder.py  server.py  subjective_scales.py
src/intervals_icu_mcp/tools/: activities.py  activity_analysis.py  athlete.py  curves.py  event_management.py  events.py  gear.py  performance.py  routes.py  sport_settings.py  weather.py  wellness.py  workout_library.py
tests/: conftest.py  test_arg_coercion.py  test_athlete_tools.py  test_data_enrichment.py  test_download_guards.py  test_event_aliases.py  test_event_management.py  test_event_type_alias.py  test_firestore_oauth.py  test_google_oauth.py  test_interval_search.py  test_lean_tool_set.py  test_new_tools.py  test_resilient_lists.py  test_response_builder_hardening.py  test_retry.py  test_service_token.py  test_sport_settings.py  test_stream_caps.py  test_streams_and_events.py  test_subjective_scales.py  test_write_tool_gate.py
